# core_helpers

./: main.py  pyproject.toml
app/: config.py  custom_logs.py
core_helpers/: __init__.py  cli.py  consts.py  logs.py  rich_print.py  updates.py  utils.py  xdg_paths.py
tests/: test_cli.py  test_logs.py  test_updates.py
