[tool.poetry]
name = "core-helpers"
version = "0.1.0"
description = ""
license = "GPL-3.0-only"
authors = ["YisusChrist <alejandro.gonzalezm02@estudiante.uam.es>"]
readme = "README.md"
repository = "https://github.com/YisusChrist/core-helpers"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
packaging = "^24.1"
requests = "^2.32.3"
rich = "^13.7.1"
rich-argparse-plus = "^0.3.1.4"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
